# c7n-azure-container-apps

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  github-instructions.md  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/instructions/: how-to-write-code.md  how-to-write-readme.md  how-to-write-spec-and-adr.md  how-to-write-tests.md  how-to-write-user-docs.md
.github/workflows/: docker-publish.yml
deploy/terraform/: main.tf
docker/: Dockerfile
docs/: CI_SETUP.md  GetStarted.md  IDEA.md
examples/policies/: event-policy.yml  scheduled-policy.yml
spec/: SPEC.md
spec/adr/: ADR-001-architecture-design.md
spec/done/: 20251127-135611.md  20251128-150000.md  20251128-161200.md  20251128-170500.md  20251128-180500.md  20251128-233655.md  20251129-000520.md  20251129-131410.md  20260218-230506.md
spec/todo/: 20251128-170500.md
src/c7n_azure_container_apps/: __init__.py  cli.py  entrypoint.py  queue_handler.py
src/c7n_azure_runner/: __init__.py  config.py  event_processor.py  policy_executor.py  policy_loader.py
tests/: __init__.py  test_cli.py  test_config.py  test_entrypoint.py  test_event_processor.py  test_policy_executor.py  test_policy_loader.py
tests/integration/: __init__.py  conftest.py  test_error_handling.py  test_event_flow.py  test_periodic_flow.py
